# cpp-learning-projects

./: .gitignore  README.md
cross-sectional-engine/: CMakeLists.txt  PERFORMANCE.md  README.md
cross-sectional-engine/benchmark_data/: aos_vs_soa_benchmark_result.txt  pipeline_benchmark_result.txt  signal_engine_benchmark_result.txt
cross-sectional-engine/benchmarks/: CMakeLists.txt  aos_vs_soa_benchmark.cpp  pipeline_benchmark.cpp  signal_engine_benchmark.cpp
cross-sectional-engine/include/backtest/: backtester.hpp  backtester_global.hpp  backtester_sector.hpp
cross-sectional-engine/include/compute/: signal_engine.hpp
cross-sectional-engine/include/core/: aligned_allocator.hpp  ring_buffer.hpp  sector_index.hpp  seqlock.hpp  universe_store.hpp
cross-sectional-engine/include/ingestion/: market_feed.hpp
cross-sectional-engine/include/math/: avx_math.hpp
cross-sectional-engine/include/signals/: momentum_signal.hpp  pipeline.hpp  sector_signal.hpp  signal_interface.hpp  zscore_signal.hpp
cross-sectional-engine/include/strategy/: pnl_calculator.hpp  strategy_interface.hpp  zscore_strategy.hpp
cross-sectional-engine/src/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  main_feed.cpp  main_global.cpp  main_live.cpp  main_sector.cpp
cross-sectional-engine/src/backtest/: backtester.cpp  backtester_global.cpp  backtester_sector.cpp
cross-sectional-engine/src/compute/: signal_engine.cpp
cross-sectional-engine/src/core/: sector_index.cpp
cross-sectional-engine/src/ingestion/: market_feed.cpp
cross-sectional-engine/tests/: CMakeLists.txt  sector_index_test.cpp  sector_signal_test.cpp  signal_engine_test.cpp  snapshot_test.cpp
derivlib/: CMakeLists.txt  README.md
derivlib/include/mc/: MonteCarloEngine.h
derivlib/include/mc/models/: BlackScholesModel.h  IProcessModel.h
derivlib/include/mc/payoffs/: EuropeanPayoff.h
derivlib/include/stats/: OnlineStats.h
derivlib/src/: MonteCarloEngine.cpp
derivlib/src/mc/: BlackScholesModel.cpp
derivlib/tests/: CMakeLists.txt  MonteCarlo_test.cpp
limit-order-book/: .gitignore  CMakeLists.txt  README.md
limit-order-book/include/: LimitOrderBook.h  Order.h
limit-order-book/src/: LimitOrderBook.cpp  main.cpp
market-data-processor/: .gitignore  CMakeLists.txt  README.md
market-data-processor/benchmarks/: bench_latency.cpp  queue_benchmark.cpp  singlethread_baseline.cpp
market-data-processor/data/: .gitkeep
market-data-processor/demo/: crash_test.cpp
market-data-processor/include/: lock_based_queue.hpp  lock_free_queue.hpp  market_sim.hpp  signal_engine.hpp  types.hpp
market-data-processor/scripts/: requirements.txt  visualize_latency.py
market-data-processor/src/: CMakeLists.txt  main.cpp  main_lock_based.cpp  main_lock_free.cpp  market_sim.cpp  signal_engine.cpp
market-data-processor/tests/: CMakeLists.txt
mc-option-pricer/: CMakeLists.txt  README.md
mc-option-pricer/include/: mc_option_pricer.h
mc-option-pricer/src/: CMakeLists.txt  mc_option_pricer.cpp
mc-option-pricer/tests/: CMakeLists.txt  test_mc_option_pricer.cpp
online-stats/: CMakeLists.txt  README.md
online-stats/include/: welford.h
online-stats/tests/: CMakeLists.txt  main_test.cpp
simd-timeseries/: .gitignore  CMakeLists.txt  README.md
simd-timeseries/benchmark_data/: results.csv
simd-timeseries/benchmarks/: CMakeLists.txt  stats_benchmark.cpp
simd-timeseries/include/: aligned_allocator.hpp  simd_utils.hpp  time_series.hpp
simd-timeseries/scripts/: visualize_benchmark.py
simd-timeseries/src/: time_series.cpp
simd-timeseries/tests/: CMakeLists.txt  alignment_test.cpp  simd_test.cpp  stats_test.cpp
